erDiagram


    USER_ROLE ||--|| DOCTOR:roleId
    USER_ROLE ||--|| ADMIN:roleId
    USER_ROLE ||--|| PATIENT:roleId

    SPECIALZATION ||--|| DOCTOR:specializationId
    QULIFICATION ||--|| DOCTOR:qualificationId

    MEDICLE_CENTER_TYPE ||--|| MEDICLE_CENTER:centerTypeId

    MEDICLE_CENTER ||--o{ DOCTOR_MEDICAL_CENTER_ROOM_SCHEDULE :medicalCenterId
    DOCTOR ||--o{ DOCTOR_MEDICAL_CENTER_ROOM_SCHEDULE :doctorId


    MEDICLE_CENTER ||--o{ PAYMENT :medicalCenterId
    DOCTOR ||--o{ PAYMENT:doctorId
    PATIENT ||--o{ PAYMENT:patientId

    PAYMENT||--|| APPOINTMENT:paymentId

    MEDICLE_CENTER||--o{ APPOINTMENT:medicleCenterId
    DOCTOR ||--o{ APPOINTMENT:doctorId
    PATIENT ||--o{ APPOINTMENT:patientId
    DOCTOR_MEDICAL_CENTER_ROOM_SCHEDULE ||--o{ APPOINTMENT:sheduleId

    PATIENT ||--o{ PATIENT_REVIEW:patientId


    USER_ROLE{
        serial  *id PK
        varchar(255) role
        varchar(255) status
    }

    ADMIN{
        serial  *id PK
        varchar(255) email
        varchar(255) password
        int roleId FK
        varchar(255) fullName
        varchar(255) uniqId
        varchar(255) status
    }


    DOCTOR{
        serial  *id PK
        varchar(255) fullName
        varchar(255) gender
        varchar(255) contact
        varchar(255) address1
        varchar(255) address2
        varchar(255) nic
        varchar(255) email
        varchar(255) uniqId
        varchar(255) password "Hashed password for authentication"
        varchar(255) medicalRegistrationNo "Medical council registration number"
        int yearsOfExperience "Experience in years"
        varchar(255) hospitalAffiliation "Current working hospital/clinic"
        int qualificationId FK  "QULIFICATION pk pass to here but when doc save automatically if not exit save QULIFICATION"
        int specializationId FK "SPECIALZATION pk pass to here but when doc save automatically if not exit save SPECIALZATION"
        varchar(255) status "Whether the doctor is currently active in the system"
        float doctorFee
        int roleId FK
        int dailyPatientCount
    }

    SPECIALZATION{
        serial  *id PK
        varchar(255) specializationName "Area of specialization (e.g., Cardiologist, Oncologist)"
        varchar(255) status "active in the syste"
    }

    QULIFICATION{
        serial  *id PK
        varchar(255) qualificationName "Medical degrees (e.g., MBBS, MD)"
        varchar(255) status "active in the syste"
    }

    PATIENT{
        serial  *id PK
        varchar(255) fullName
        varchar(255) email
        varchar(255) password
        varchar(255) gender
        timestamp dateOfBirthDay
        int age
        varchar(255) city
        varchar(255) contact
        varchar(255) address
        varchar(255) status "Whether patient account is active"
        int roleId FK
        varchar(255) uniqId
    }

    MEDICLE_CENTER{
        serial  *id PK
        varchar(255) centerName
        varchar(255) registrationNumber "Official registration number (optional but useful for authenticity)"
        varchar(255) contact1
        varchar(255) contact2
        varchar(255) email
        varchar(255) address
        varchar(255) district
        timestamp openTime
        timestamp closeTime
        int centerTypeId FK "MEDICLE_CENTER_TYPE pk pass to here but when medicle_center save automatically if not exit save MEDICLE_CENTER_TYPE"
        float channelingFee
        varchar(255) status
        text channelingRooms "EXAMPLE:-[{id:99504,medicalCenterId:0,roomName:Consult Room,description:Wisdom tooth extractions and minor surgeries,status:Available}]"
    }

    MEDICLE_CENTER_TYPE{
        serial  *id PK
        varchar(255) centerType "Type of medical center ('Hospital', 'Clinic', 'Private Practice', 'Diagnostic Center')"
        varchar(255) status
    }

    DOCTOR_MEDICAL_CENTER_ROOM_SCHEDULE{
        serial *id PK
        int doctorId FK  "DOCTOR.id"
        int medicalCenterId FK "MEDICLE_CENTER.id"
        int roomId  " CHANNELING_ROOM.id"
        varchar(10) dayOfWeek  " 'Monday', 'Tuesday'"
        time startTime
        time endTime
        varchar(255) status "'ACTIVE', 'INACTIVE'"
    }



    APPOINTMENT {
        serial *id PK
        int  patientId FK "The patient who made the appointment"
        varchar(255) patientName
        int doctorId FK "The doctor being channeled"
        int medicleCenterId FK "The location of the appointment"
        int roomId  "Specific room for appointment"
        int sheduleId FK  "The selected schedule (day, time)"
        timestamp appointmentDate
        timestamp appointmentTime
        timestamp appointmentEndTime
        int channelNumber "Queue number or channel numbe"
        timestamp bookingDate "When the appointment was booked"
        varchar(255) appointmentStatus " status ('pending', 'closed')"
        int paymentId FK
    }

    PAYMENT{
        serial *id PK
        int medicalCenterId FK
        int doctorId FK
        int patientId FK
        float amount "get APPOINTMENT table  medicleCenterId.cghannelingFee + doctorId.doctorFee"
        varchar(255) paymentMethod
        varchar(255) paymentStatus "Result of payment('PENDING', 'SUCCESS', 'FAILED', 'REFUNDED')"
        timestamp paymentDate
        timestamp paymentTime

    }
    PATIENT_REVIEW{
        serial *id PK
        int patientId FK "The patient who made the review"
        varchar(255) comment "Review text or feedback"
        timestamp reviewDate
        bool visible "Whether the review is visible to others"
        varchar(255) status "Status of the review ('active', 'inactive')"

 }
